# bayesgp

./: .gitignore  CITATION.cff  README.md
.github/workflows/: tests.yml
bayesgp/: README.md  pyproject.toml
bayesgp/bayesgp/: __init__.py  datasets.py  kernels.py  metrics.py  model.py
bayesgp/benchmarks/: run_benchmark.py
examples/: basic_quadratic.py  calibration_diagnostics.py
tests/: test_datasets.py  test_kernels.py  test_metrics.py  test_model.py
